Add supervisors count to apps stats
