# api/external/applications/applications.swagger.json
@@ -413,6 +413,10 @@
         "total_services": {
           "type": "integer",
           "format": "int32"
+        },
+        "total_supervisors": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
