# components/automate-gateway/api/applications.pb.swagger.go
@@ -416,6 +416,10 @@ func init() {
         "total_services": {
           "type": "integer",
           "format": "int32"
+        },
+        "total_supervisors": {
+          "type": "integer",
+          "format": "int32"
         }
       }
     },
